--- a/indep.html
+++ b/indep.html
@@ -3,11 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MenudeComida</title>
+    <link rel="stylesheet" href="css/estilo.css">
+    <link href="https://fonts.googleapis.com/css2?family=Meie+Script&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header">
+        <h2>
+            🍽️
+        </h2>
+
+        <p>
+            Restaurant familiar
+        </p>
+    </header>
+    <div class="hero">
+        <h2>
+            "El Plato de la Abuela "
+        </h2>
+    </div>
+    <main>
+        <div class="contenedor">
+
+        </div>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
