Modifico el cuerpo y agrego mas menús

--- a/indep.html
+++ b/indep.html
@@ -8,24 +8,42 @@
     <link href="https://fonts.googleapis.com/css2?family=Meie+Script&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header">
+    <header>
+    <div class="contenedor">
         <h2>
-            🍽️
+        🍽️
         </h2>
-
         <p>
-            Restaurant familiar
+        Hamburgueseria
         </p>
-    </header>
-    <div class="hero">
-        <h2>
-            "El Plato de la Abuela "
-        </h2>
-    </div>
-    <main>
-        <div class="contenedor">
-
         </div>
+    </header>
+    
+    
+    <main>
+        <h1>
+            "El gordo Tonny "
+        </h1>
+
+        <h2 class="burgas">
+                🍔Hamburguesas🍔
+            <p>Hamburguesa americana</p>
+            <p>Hamburguesa con palta</p>
+            <p>Cheeseburguer</p>      
+        </h2>
+        <h2 class="pizzas">
+                🍕Pizzas🍕
+                <p>Muzza</p>
+                <p>Especial</p>
+                <p>Palmitos</p>
+                <p>4 quesos</p>
+        </h2>
+        <h2 class="papas">
+                🍟Papas Fritas🍟
+                <p>Grandes</p>
+                <p>Medianas</p>
+                <p>Chicas</p>
+        </h2>
     </main>
     <footer>
 
