modificamos el body

--- a/indep.html
+++ b/indep.html
@@ -6,44 +6,36 @@
     <title>MenudeComida</title>
     <link rel="stylesheet" href="css/estilo.css">
     <link href="https://fonts.googleapis.com/css2?family=Meie+Script&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Michroma&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
-    <div class="contenedor">
-        <h2>
-        🍽️
-        </h2>
-        <p>
-        Hamburgueseria
-        </p>
-        </div>
-    </header>
-    
-    
-    <main>
+    <div class="contenedor"> 
         <h1>
-            "El gordo Tonny "
+            El gordo Tonny
         </h1>
+    </div>
+    </header>
 
-        <h2 class="burgas">
-                🍔Hamburguesas🍔
-            <p>Hamburguesa americana</p>
-            <p>Hamburguesa con palta</p>
-            <p>Cheeseburguer</p>      
-        </h2>
-        <h2 class="pizzas">
-                🍕Pizzas🍕
+    <main>
+        <div class="hero">
+                <h2>🍔Hamburguesas🍔<h2>
+                <p>Hamburguesa americana</p>
+                <p>Hamburguesa con palta</p>
+                <p>Cheeseburguer</p>
+                <p>Blue cheese</p>      
+                <h2>🍕Pizzas🍕</h2>
                 <p>Muzza</p>
                 <p>Especial</p>
                 <p>Palmitos</p>
                 <p>4 quesos</p>
-        </h2>
-        <h2 class="papas">
-                🍟Papas Fritas🍟
+                <p>Anchoas</p>
+                <h2>🍟Papas Fritas🍟</h2>
                 <p>Grandes</p>
                 <p>Medianas</p>
                 <p>Chicas</p>
-        </h2>
+        </div>
     </main>
     <footer>
 
